# myTimeOffRequest

./: README.md  pre-commit-config.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: python-tests.yml
myTimeOffRequest/: db.sqlite3  manage.py
myTimeOffRequest/UnitTest/: models_test.py
myTimeOffRequest/myTimeOffRequest/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
myTimeOffRequest/myTimeOffRequest/migrations/: 0002_add_field.py  0003_alter_employee_options_alter_employee_managers_and_more.py
myTimeOffRequest/myTimeOffRequest/myUnitTest/: models_test.py
myTimeOffRequest/myTimeOffRequest/static/: style.css
myTimeOffRequest/myTimeOffRequest/templates/: home.html  login.html  modify_request.html  signup.html  submit_new_request.html  time_off_requests.html
myTimeOffRequest/myTimeOffRequest/templates/registration/: login.html
new_venv/: pyvenv.cfg
new_venv/Scripts/: activate  activate.bat
