[tool.poetry]
name = "myTimeOffRequest"
version = "0.1.0"
description = ""
authors = ["SleepyLink1 <88170820+SleepyLink1@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
pre-commit = "^3.6.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
